# -*-makefile-*-
# Makefile template to build the on-line documentation
# Project: G.A. Library
# Author: Ronaldo Faria Lima <ronaldo@ronaldolima.eti.br>
# $Id: Makefile.am,v 1.5 2005-02-07 21:04:11 ron_lima Exp $
info_TEXINFOS = galib.texi						\
                list.texi						\
                dlist.texi						\
                clist.texi						\
                ivector.texi					\
                stack.texi						\
                queue.texi
