# -*-makefile-*-
# Makefile template to build the on-line documentation
# Project: G.A. Library
# Author: Ronaldo Faria Lima <ronaldo@ronaldolima.eti.br>
# $Id: Makefile.am,v 1.6 2005-08-18 14:20:32 daniel_csoares Exp $
info_TEXINFOS = galib.texi						\
                list.texi						\
                dlist.texi						\
                clist.texi						\
                ivector.texi					\
                stack.texi						\
                deque.texi						\
                queue.texi
