# -*-makefile-*-
# Makefile template to build the on-line documentation
# Project: G.A. Library
# Author: Ronaldo Faria Lima <ronaldo@ronaldolima.eti.br>
# $Id: Makefile.am,v 1.7 2005-10-07 19:06:51 daniel_csoares Exp $
info_TEXINFOS = galib.texi						\
                list.texi						\
                dlist.texi						\
                clist.texi						\
                ivector.texi					\
                stack.texi						\
                deque.texi						\
                dclist.texi						\
                queue.texi
