# -*-makefile-*-
# Intermediary makefile template to build the circular list subset of the
# library
# Project: G.A. Library
# Author: Ronaldo Faria Lima <ronaldo@ronaldolima.eti.br>
# $Id: Makefile.am,v 1.4 2005-02-19 16:47:32 ron_lima Exp $
noinst_LTLIBRARIES = libclist.la
libclist_la_SOURCES = clist_insert.c			\
                      clist_init.c				\
                      clist_del.c				\
                      clist_destroy.c			\
                      clist_get.c				\
                      clist_move.c				\
                      ../../include/clist.h
INCLUDES=-I../../include/

