# -*-makefile-*-
# Intermediary makefile template to build the dclist subset of the
# library
# Project: G.A. Library
# Author: Daniel Costa Soares <daniel_csoares@yahoo.com.br>
# $Id: Makefile.am,v 1.1 2005-10-05 12:19:19 daniel_csoares Exp $
noinst_LTLIBRARIES = libdclist.la
libdclist_la_SOURCES = dclist_init.c				\
                      dclist_del.c					\
                      dclist_destroy.c				\
                      dclist_get.c					\
                      dclist_insert.c				\
                      dclist_move.c					\
			          ../../include/dclist.h
INCLUDES=-I../../include/
