# -*-makefile-*-
# Intermediary makefile template to build the queue subset of the
# library
# Project: G.A. Library
# Author: Daniel Costa Soares <daniel_csoares@yahoo.com.br>
# $Id: Makefile.am,v 1.1 2005-07-28 12:21:39 daniel_csoares Exp $
noinst_LTLIBRARIES = libdeque.la
libdeque_la_SOURCES = deque_init.c		\
                      deque_push.c		\
                      deque_destroy.c	\
                      deque_pop.c		\
                      ../../include/deque.h
INCLUDES=-I../../include/
