# -*-makefile-*-
#
# G.A. Library - A generic algorithms and data structures library
# Copyright (C) 2005 - Ronaldo Faria Lima
#
# This library is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation; either version 2.1 of the
# License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
# USA
#
# Intermediary makefile template to build the queue subset of the
# library
# Project: G.A. Library
# Author: Daniel Costa Soares <daniel_csoares@yahoo.com.br>

noinst_LTLIBRARIES = libdeque.la
libdeque_la_SOURCES = fjc_deque_init.c		\
                      fjc_deque_push.c		\
                      fjc_deque_destroy.c	\
                      fjc_deque_pop.c		\
                      fjc_deque_size.c      \
                      ../../include/fjc_deque.h
AM_CPPFLAGS=-I../../include/
