# -*-makefile-*-
# Intermediary makefile template to build the dlist subset of the
# library
# Project: G.A. Library
# Author: Ronaldo Faria Lima <ronaldo@ronaldolima.eti.br>
# $Id: Makefile.am,v 1.2 2005-02-19 16:47:32 ron_lima Exp $
noinst_LTLIBRARIES = libdlist.la
libdlist_la_SOURCES = dlist_init.c				\
                      dlist_del.c				\
                      dlist_destroy.c			\
                      dlist_get.c				\
                      dlist_insert.c			\
                      dlist_move.c				\
                      ../../include/dlist.h
INCLUDES=-I../../include/
