# -*-makefile-*-
# Intermediary makefile template to build the ivector subset of the
# library
# Project: G.A. Library
# Author: Ronaldo Faria Lima <ronaldo@ronaldolima.eti.br>
# $Id: Makefile.am,v 1.1 2004-04-04 11:13:54 ron_lima Exp $
noinst_LTLIBRARIES = libivector.la
libivector_la_SOURCES = ../../include/ivector.h \
                        ivector_add.c           \
                        ivector_alloc.c         \
                        ivector_bsearch.c       \
                        ivector_free.c          \
                        ivector_get.c           \
                        ivector_put.c           \
                        ivector_qsort.c 
INCLUDES=-I../../include/
