# -*-makefile-*-
# Intermediary makefile template to build the ivector subset of the
# library
# Project: G.A. Library
# Author: Ronaldo Faria Lima <ronaldo@ronaldolima.eti.br>
# $Id: Makefile.am,v 1.3 2005-02-19 16:47:32 ron_lima Exp $
noinst_LTLIBRARIES = libivector.la
libivector_la_SOURCES = ../../include/ivector.h	\
                        ivector_add.c			\
                        ivector_init.c			\
                        ivector_bsearch.c		\
                        ivector_destroy.c		\
                        ivector_get.c			\
                        ivector_put.c			\
                        ivector_qsort.c			\
                        ivector_del.c
INCLUDES=-I../../include/
