# -*-makefile-*-
# Intermediary makefile template to build the stack subset of the
# library
# Project: G.A. Library
# Author: Ronaldo Faria Lima <ronaldo@ronaldolima.eti.br>
# $Id: Makefile.am,v 1.3 2005-02-19 16:47:32 ron_lima Exp $
noinst_LTLIBRARIES = libstack.la
libstack_la_SOURCES = stack_init.c				\
                      stack_pop.c				\
                      stack_destroy.c			\
                      stack_push.c				\
                      ../../include/stack.h
INCLUDES=-I../../include/
